# ml-kurs-wdrozeniowy-25

./: .gitignore  Lista4ML.ipynb  ML_WDR_1_EDA.ipynb  ML_WDR_2_NN_Basics.ipynb  ML_WDR_2_NN_Basics_MW.ipynb  Perceptron.ipynb  Polecenie.ipynb  README.md  Zadanie1_Adam.ipynb  Zadanie3.ipynb  lista1.ipynb  lista2.ipynb  lista2_feedback_dla maxster256.txt  lista2_feedback_dla_Maciej_Lisak.txt  lista2v1.ipynb  lista3.ipynb  perceptron.py  perceptron_nn.py  pyproject.toml  requirements.txt  trainer.py  util.py  zad1_eda.ipynb  zad2_perceptron.ipynb  zadanie2_Adam.ipynb
code_review/: Zadanie2.ipynb
first_run/version_0/: events.out.tfevents.1765836331.fidok-MacBook.local.44782.3  hparams.yaml
first_run/version_0/checkpoints/: epoch=15-step=3968.ckpt
first_run/version_1/: events.out.tfevents.1765837388.fidok-MacBook.local.44782.4  hparams.yaml
first_run/version_1/checkpoints/: epoch=48-step=12152.ckpt
kursy/: eda.ipynb  mlp.ipynb  nn_basics.ipynb
lista2/: Perceptron.ipynb  PerceptronLista.ipynb  perceptron.py  trainer.py  trainer_test.py  util.py
lista3/: Multilayered_Perceptron.ipynb
lista4/: Convolution.ipynb  Helper_module.py  ML_WDR_4_CNN.ipynb
listy/: Filip_ML_WDR_2_NN_Basics.ipynb  Filip_ML_WDR_3_MLP.ipynb  Jakub_ML_WDR.ipynb  ML_WDR_1_EDA.ipynb  ML_WDR_2_NN_Basics.ipynb
listy/lista1/: Jakub_ML_WDR.ipynb
zad1/: zad1.ipynb
zad3/: best_model.pth  optuna_reg_test.pth  zad3.ipynb  zad3_test.py
zadanie 1/: zad1.ipynb  zad1_test.py
zadanie 2/: zad2.ipynb
zadanie 2/dataset/: X_test.csv  X_val.csv  y_test.csv  y_train.csv  y_val.csv
